RESOLVED FIXED 269738
DisplayList replay does not apply filters
https://bugs.webkit.org/show_bug.cgi?id=269738
Summary DisplayList replay does not apply filters
Nikolas Zimmermann
Reported 2024-02-19 12:31:46 PST
Display list items of type 'DrawFilteredImageBuffer' are unhandled in DisplayListItems 'applyItem'. The filtering process is not executed at all during replay - the recorded source ImageBuffer exists, but is unused.
Attachments
Nikolas Zimmermann
Comment 1 2024-02-19 12:34:28 PST
EWS
Comment 2 2024-02-22 02:22:11 PST
Committed 275163@main (21530f9cc92c): <https://commits.webkit.org/275163@main> Reviewed commits have been landed. Closing PR #24765 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-22 02:23:14 PST
Note You need to log in before you can comment on or make changes to this bug.