DisplayList replay does not apply filters https://bugs.webkit.org/show_bug.cgi?id=269738

Reviewed by Said Abou-Hallawa.

DisplayList recording properly handles filters -- they
are serialized as 'DrawFilteredImageBuffer' command. During replay this
display list item type is unhandled, therefore the filtered image is not
drawn when replaying the display list - fix that.

This blocks the intrduction of the multi-threaded CPU rendering mode
for WPE/Skia, since that relies on DisplayList recording & replay.

Coverered by existing tests, when enforcing DisplayList recording.

* Source/WebCore/platform/graphics/displaylists/DisplayListItem.cpp:
(WebCore::DisplayList::applyFilteredImageBufferItem):
(WebCore::DisplayList::applyItem):
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.cpp:
(WebCore::DisplayList::DrawFilteredImageBuffer::apply const):
(WebCore::DisplayList::DrawFilteredImageBuffer::apply): Deleted.
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.h:

Canonical link: https://commits.webkit.org/275163@main